assets/css/style.css
/* ... */
#menu-content {
  font-size: 0.8em;
  grid-area: menu-content;
  /* width: calc(100vw - calc(var(--general-padding) * 2)); */
  justify-items: center;

  margin-top: calc(var(--general-padding)/2);

  display: grid;

  grid-template-columns: 1fr;
  column-gap: var(--general-padding);
  row-gap: var(--general-padding);
}

@media only screen and (min-width: 900px) {
  #menu-content {
    grid-column-gap: var(--general-padding);
    grid-template-columns: auto auto auto auto auto auto;
    grid-auto-rows: 40px;
    align-items: center;
  }
}

@media only screen and (min-width: 640px) and (max-width: 900px) {
  #menu-content {
    grid-template-columns: 1fr 1fr 1fr;
    grid-auto-rows: 40px;
    align-items: center;
  }
}

#menu-content h2 {
  display: block;
  font-size: 1.3em;
  padding: 0;
  margin: 0;
  margin-top: var(--general-padding);
}

#menu-content a {
  font-size: 1.3em;
  font-style: normal;
  display: block;
  line-height: 1em;
  height: 1.2em;
  border-bottom-style: none;
  border-bottom-width: 2px;
}

header.light #menu-content a.current,
header.light #menu-content a.hover {
  border-bottom-color: var(--light-colour);
}

header.dark #menu-content a.current,
header.dark #menu-content a.hover {
  border-bottom-color: var(--dark-colour);
}

header.black #menu-content a.current,
header.black #menu-content a.hover {
  border-bottom-color: black;
}

#menu-content a.current {
  border-bottom-style: solid;
}

#menu-content a:hover {
  font-size: 1.3em;
  font-style: normal;
  display: block;
  text-decoration: none;
  border-bottom-style: solid;

}

#menu-content a:visited {
  font-size: 1.3em;
  font-style: normal;
}

/* HEADER */

header {
  z-index: 3;
  position: absolute;
  top: 0;
  left: 0;
  width: 100vw;
  height: calc(var(--header-height) + 50px);

  padding-top: var(--header-vertical-padding);
  padding-bottom: var(--header-vertical-padding);

  align-content: start;
  display: grid;
}

header.light {
  background: linear-gradient(var(--header-background-colour), rgba(0,0,0,0));
}

header.desktop-header {
  grid-template-areas: ". logo logo logo logo menu-content menu-content menu-content menu-content menu-content menu-content menu-content menu-content .";
}

header.desktop-header.light a {
  color: var(--light-colour);
}

header.desktop-header.dark a {
  color: var(--dark-colour);
}

header.desktop-header.black a {
  color: black;
}

header.mobile-header {
  align-items: center;
  display: none;
}

@media only screen and (max-width: 968px) {
  header.mobile-header {
    display: grid;
    grid-template-areas: ". logo logo logo openmenu .";
  }
}

@media only screen and (max-width: 968px) {
  header.desktop-header {
    display: none;
  }
}

header .logo {
  grid-column: 2;
}

header.desktop-header .logo {
  grid-area: logo;
}

header.light svg{
  fill: var(--light-colour);
}

header.dark svg{
  fill: var(--dark-colour);
}

header.black svg{
  fill: black;
}

header #open-menu {
  grid-area: openmenu;
  display: block;
  justify-self: end;
  transition: transform, 0.1s;
}

header #open-menu svg {
  width: calc(var(--menu-button-size) - 10px);
  height: calc(var(--menu-button-size) - 10px);
}

main {
  grid-row: 1;
}

header, nav {
  padding-top: var(--general-padding);
  padding-bottom: var(--general-padding);
}

section .text {
  margin-bottom: var(--text-margin-bottom);
}

section.intro .text {
  margin-bottom: var(--intro-text-margin-bottom);
}

section.header-underlay {
  height: var(--header-height);
  background-color: var(--light-colour);
}

section.vertical-centred h1 {
  align-self: center;
}

section.bottom-left h1 {
  align-self: bottom;
  justify-self: left;
}

section.vertical-bottom h1 {
  align-self: end;
  margin-bottom: -20px;
}

/* section>div {
  grid-area: content;
} */

section.highlight {
  background-color: var(--highlight-colour);
}

@media only screen and (max-width: 968px) {
  section, footer, header, nav, .cookie-notice {
    grid-template-columns: 0 1fr 1fr 1fr 1fr 0;
  }

  @supports (grid-template-columns: env(safe-area-inset-left)) {
    footer, header, section, nav, .cookie-notice {
      grid-template-columns: env(safe-area-inset-left) 1fr 1fr 1fr 1fr env(safe-area-inset-right);
    }
  }
}

#full-page {
  height: 100vh;
}

/* Special first one with padding to pull content below the header */
/* and padding to pull action buttons up so they are not hidden by iOS furniture!*/
/* section:first-of-type {
  padding: 0;
} */


section.intro {
  grid-template-areas: ". content content content content content content content . . . . . ."
  ". leftbutton leftbutton leftbutton rightbutton rightbutton rightbutton . . . . . . .";
  padding: 40px 0px;
}

@media only screen and (max-width: 968px) {
  section.intro {
    padding: 20px 0px;
  }
}

.text p:nth-of-type(1) {
  font-weight: 400;
}

.find-out-more .text p:nth-of-type(1) {
  font-weight: 300;
}

section.intro.wider {
  grid-template-areas: ". content content content content content content content content content . . . .";
}

@media only screen and (max-width: 968px) {
  section.intro {
    grid-template-areas: ". content content content content ."
    ". leftbutton leftbutton rightbutton rightbutton .";
  }
}

.intro .text {
  grid-area: content;
  font-size: 1.2em;
  line-height: 1.2em;
  font-weight: 300;
}

@media only screen and (max-width: 968px) {
  .intro .text {
    font-size: 1em;
  }
}

section.double-image.right {
  grid-template-areas: ". content content content content content content topimage topimage topimage topimage topimage topimage ."
                       ". content content content content content content bottomimage bottomimage bottomimage bottomimage bottomimage bottomimage .";
  padding: 40px 0px;
  grid-row-gap: var(--general-padding);
}
/* ... */

